alignment fixes

--- a/index.css
+++ b/index.css
@@ -23,8 +23,35 @@ body {
   margin-top:16px!important
 }
 
-.center {
-  margin: auto;
-  width: 60%;
+.center-video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+
+.column1 {
+  float: left;
+  width: 25%;
   padding: 10px;
+}
+
+.column2 {
+  float: left;
+  width: 75%;
+  padding: 10px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+ .column {
+    width: 100%;
+  }
 }
